static/css/custom.css
#brand .icon {
  width: 125px !important;
}

#root {
  max-width: 1024px !important;
}

#newsletter {
  border-top-style: solid;
  border-width: 2px;
  text-align: center;
}

figcaption {
  margin-top: 10px !important;
}

button {
  background-color: var(--theme-primary);
  border: solid 1px var(--prebgcolor);
  color: var(--fontcolor);
  padding: 12px 32px;
  text-decoration: none;
  margin: 4px 2px;
  cursor: pointer;
  font-size: 1.125em;
  font-family: monospace;
  font-weight: 600;
}

.align-in-center {
  text-align: center;
}

.btn {
  text-decoration: none !important;
}

button:hover {
  box-shadow: 0px 0px 2px 0px var(--prebgcolor);
}

input {
  padding: 5px;
  margin: 5px;
  font-size: 1em;
  border: 1px solid var(--prebgcolor);
  font-family: monospace;
}

#owner {
  font-size: 1em;
  color: cadetblue;
}

.navbar {
  margin: 0px !important;
}

.sidebar {
  border: 1px solid var(--prebgcolor);
  padding: 10px;
  height: fit-content;
  font-size: 0.85em;
}

.book-title {
  text-align: center;
}

.cover-image {
  box-shadow: 0px 0px 5px 1px var(--prebgcolor);
}

.cover-image:hover {
  box-shadow: 0px 0px 10px 1px var(--prebgcolor);
}

#content {
  margin-bottom: 10px !important;
}

.product-image {
  cursor: pointer;
  border-bottom: solid black 1px;
}

.sidebar-product {
  display: none;
}

.product-body {
  padding: 0 10px 10px 10px;
  font-size: 0.9em;
}

summary {
  cursor: pointer;
}

.course-name {
  font-size: xx-large;
  position: sticky;
  top: 0px;
  background-color: var(--bgcolor);
  text-align: center;
  padding: 10px;
  border-bottom: solid var(--prebgcolor) 1px;
}

.details-body {
  padding: 0px 0px 20px 0px;
}

.dropdown-container {
  /* border: solid 1px grey; */
}

.dropdown-listing {
  border: solid 1px grey;
}

.dropdown-summary {
  padding: 10px;
  font-weight: bold;
  background-color: rgba(226, 226, 226, 0.378);
}

.section-name {
  min-width: 66%;
  display: inline-block;
}

.section-meta {
  display: inline-block;
}

.section-description {
  margin-left: 20px;
  margin-bottom: 5px;
}

.chapter-details {
  display: inline-block;
}

.chapter-icon {
  display: inline-block;
}

.chapter-names {
  padding-left: 20px;
  color: var(--linkcolor);
  display: inline-block;
  min-width: 85%;
  max-width: 85%;
}

.course-title {
  margin: 0px;
  font-size: larger;
}

.course-subtitle {
  margin-top: 5px;
  color: var(--fontcolor);
  font-size: 1rem;
}

.chapter-preview {
  /* padding: 10px; */
  margin: 20px;
  margin-top: 5px;
}

.blog-card {
  max-width: 100%;
  text-decoration: none;
  color: var(--fontcolor) !important;
}

.blog-card {
  border: solid var(--prebgcolor) 1px;
  margin: 5px 0 5px 0;
  max-width: 100% !important;
  text-decoration: none !important;
  cursor: pointer;
  color: var(--fontcolor) !important;
}

.post-title {
  margin: 0px !important;
  padding: 10px;
  padding-bottom: 0px;
}

.post-card-content {
  padding: 0px;
  font-size: 0.9em;

  p {
    padding: 0 10px 0 10px;
  }
}

.clear {
  clear: both;
}

.post-list {
  display: flex;
  flex-wrap: wrap;
}

iframe {
  border: none;
}

.produc-bestseller {
  border: solid black 1px;
  padding: 0px 5px 0px 5px;
  background-color: var(--theme-primary);
  border-radius: 3px;
}

.prod-description {
  /* background-color: rgb(255, 255, 182); */
}

.prod-what-u-learn {
  display: flex;
  flex-wrap: wrap;
  border: solid 1px grey;
  padding: 10px;
  margin: 0px 0px 20px 0px;
}

.prod-what-u-learn-tick {
  display: inline-block;
  padding-right: 10px;
}

.prod-what-u-learn-point {
  min-width: 100%;
  max-width: 100%;
  word-wrap: break-word;
  margin-bottom: 5px;
  display: flex;
}

.prod-content-summary {
  display: flex;
  flex-wrap: wrap;
}

.prod-content-summary-tick {
  display: inline-block;
  padding-right: 10px;
}

.prod-content-summary-point {
  min-width: 100%;
  max-width: 100%;
  word-wrap: break-word;
  margin-bottom: 5px;
  display: flex;
}

.card-collection {
  display: flex;
  flex-wrap: wrap;
}

.info-card {
  min-width: 96%;
  max-width: 96%;
  word-wrap: break-word;
  border: solid grey 1px;
  margin: 1%;
  padding: 1%;
}

.reviewer-meta {
  display: flex;
  flex-wrap: wrap;
  padding: 10px;
}

.reviewer-photo {
  min-width: 75px;
  max-height: 75px;
  border-radius: 50%;
  border: solid grey 1px;
}

.rating-star {
  /* TODO: change this */
  color: red;
}

.reviewer-data {
  margin: 5px;
  padding: 5px;
}

.reviewer-name {
  min-width: 100%;
  font-weight: 600;
}

.review-date {
  width: 100%;
}

.review-text {
  padding: 5px;
}

.review-summary {
  text-align: center;
  font-size: large;
  margin-bottom: 10px;
  font-weight: 600;
}

details[open] > summary {
  border-bottom: solid grey 1px;
}

.certificate {
  border: solid grey 1px;
  background-color: var(--theme-primary);
  text-align: center;
}

.creators-card-collection {
  min-width: 100%;
  display: flex;
  flex-wrap: wrap;
}

.creators-info-card {
  word-wrap: break-word;
  min-width: 96%;
  /* border: solid grey 1px; */
  padding: 1%;
  margin: 1%;
}

.creators-meta {
  display: flex;
  flex-wrap: wrap;
  padding: 10px;
}

.creators-photo {
  min-width: 75px;
  max-height: 75px;
  border-radius: 50%;
  border: solid grey 1px;
}

.creators-data {
  margin: 10px;
  padding: 10px;
}

.creators-name {
  min-width: 100%;
  font-weight: 600;
}

.creators-bio {
  padding: 5px;
}

.creators-designation {
  width: 100%;
}

.compare-table {
  /* nothing */
}

.compare-row-head {
  text-align: center;
  font-size: large;
}

.compare-row {
  text-align: center;
}

.compare-row-data {
  text-align: left;
  min-width: 200px;
}

th, td {
  padding: 10px;
  word-wrap: break-word;
  border: 0px;
  margin: 0px;
}

.compare-tick {
  font-size: 1em;
  font-weight: 600;
}

.tick-green {
  color: darkgreen;
}

.tick-red {
  color: red;
}

.compare-pjbro {
  /* min-width: 200px; */
}

.button-cta {
  background-color: var(--bgcolor);
  position: sticky;
  bottom: 0px;
  align-items: center;
  z-index: 10000;
  margin-top: 20px;
  padding:20px;
  border-top: solid var(--prebgcolor) 1px;
}

/* Google Recaptcha */
.google-recaptcha {
  margin-top: 10px;
  font-size: x-small;
  color: grey;
}

.grecaptcha-badge {
  visibility: hidden !important;
}

.preview-video {
  display: flex;
  justify-content: center;
  margin-top: 25%;
}

.view-preview {
  margin-left: 40px;
}

.view-preview[open] > summary{
  border: none;
}

